# _dfs-to-xlsx-public

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
src/dfs_to_xlsx/: __init__.py  xlsx_writer.py
src/dfs_to_xlsx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dfs_to_xlsx/config/: config.yaml
src/dfs_to_xlsx/modules/: __init__.py  conditional_formatter.py  config_loader.py  data_cleaner.py  dataframe_registry.py  filename_builder.py  logger_manager.py  post_processor.py  progress_reporter.py  sheet_formatter.py  sheet_name_sanitizer.py  sheet_writer.py
tests/: test_conditional_formatting.py  test_config_loader.py  test_data_cleaner.py  test_dataframe_registry.py  test_filename_builder.py  test_hitlist_formatting.py  test_logger_manager.py  test_post_processor.py  test_progress_reporter.py  test_sheet_formatter.py  test_sheet_name_sanitizer.py  test_sheet_writer.py
