[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfs-to-xlsx"
version = "0.7.10"
description = "A fast, flexible Excel exporter for multiple pandas DataFrames into a styled Excel workbook."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0.0",
  "openpyxl",
  "tqdm",
  "pyyaml",
  "num2words>=0.5.14",
  "XlsxWriter>=3.2.3"
]

[project.urls]
Homepage = "https://github.com/velvetbulldozer/_dfs-to-xlsx-public"
Repository = "https://github.com/velvetbulldozer/_dfs-to-xlsx-public"
Issues = "https://github.com/velvetbulldozer/_dfs-to-xlsx-public/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dfs_to_xlsx = ["config/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --junitxml=pytest_results.xml"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
